--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat natus vel illum laudantium odio in sapiente, obcaecati totam est qui ex vero error voluptas commodi consequatur porro quis. Nulla neque totam delectus commodi. Unde laboriosam, voluptates officia animi voluptatem vitae rerum saepe quidem cum nemo! Quaerat ratione quos cum corrupti!
             </p>
-            <small> Published on Febraury 15th, 2020</small>
+            <small> Published on Febraury 15th, 2020
+            </small>
         </div>
     </body>
 </html>
